updated build properties, removed outdated project.

--- a/HmiRenderEnvironment/build.properties
+++ b/HmiRenderEnvironment/build.properties
@@ -5,7 +5,7 @@ resolve.status=beta
 junit.include= **/*Test.class
 junit.exclude= **/Abstract*.class
 
-run.jvmargs= -Xms128m -Xmx512m  -Xss5M -Dlogback.configurationFile=config/log.xml
+run.jvmargs= -Dlogback.configurationFile=config/log.xml
 
-rebuild.list=HmiEnvironment/HmiEnvironmentBase, HmiEnvironment/HmiAnimationEmbodiments, HmiEnvironment/HmiFaceEmbodiments, HmiEnvironment/HmiHeadAndGazeEmbodiments, HmiEnvironment/AsapBodyAndFaceEmbodiments
+rebuild.list=AsapEnvironment/HmiEnvironmentBase, AsapEnvironment/HmiAnimationEmbodiments, AsapEnvironment/HmiFaceEmbodiments, AsapEnvironment/HmiHeadAndGazeEmbodiments, AsapEnvironment/AsapBodyAndFaceEmbodiments
 
