--- a/HmiRsbRenderEnvironment/build.properties
+++ b/HmiRsbRenderEnvironment/build.properties
@@ -4,9 +4,8 @@ resolve.status=beta
 
 junit.include= **/*Test.class
 junit.exclude= **/Abstract*.class
-test.jvmargs=-XX:-UseSplitVerifier
 
-run.jvmargs= -Xms128m -Xmx512m  -Xss5M -Dlogback.configurationFile=config/log.xml
+run.jvmargs= -Dlogback.configurationFile=config/log.xml
 
 rebuild.list=HmiEnvironment/HmiEnvironmentBase, HmiEnvironment/HmiAnimationEmbodiments, HmiEnvironment/HmiFaceEmbodiments, HmiEnvironment/HmiHeadAndGazeEmbodiments, HmiEnvironment/HmiRenderEnvironment, HmiEnvironment/AsapRsbEmbodiments/java
 
