--- a/HmiPhysicsEnvironment/build.properties
+++ b/HmiPhysicsEnvironment/build.properties
@@ -5,7 +5,7 @@ resource.path=${shared.resources}/HmiHumanoidEmbodimentArmandia/resource;${share
 junit.include= **/*Test.class
 junit.exclude= **/Abstract*.class
 
-run.jvmargs= -Xms128m -Xmx512m  -Xss5M -Dlogback.configurationFile=config/log.xml
+run.jvmargs=-Dlogback.configurationFile=config/log.xml
 
-rebuild.list=HmiEnvironment/HmiEnvironmentBase, HmiEnvironment/HmiAnimationEmbodiments, HmiEnvironment/HmiPhysicsEmbodiments
+rebuild.list=AsapEnvironment/HmiEnvironmentBase, AsapEnvironment/HmiAnimationEmbodiments, AsapEnvironment/HmiPhysicsEmbodiments
 
