--- a/HmiWorldObjectEnvironment/build.properties
+++ b/HmiWorldObjectEnvironment/build.properties
@@ -4,7 +4,7 @@ publish.resolver=hmicore.sftp.publish
 junit.include= **/*Test.class
 junit.exclude= **/Abstract*.class
 
-run.jvmargs= -Xms128m -Xmx512m  -Xss5M -Dlogback.configurationFile=config/log.xml
+run.jvmargs= -Dlogback.configurationFile=config/log.xml
 
-rebuild.list=HmiEnvironment/HmiEnvironmentBase
+rebuild.list=AsapEnvironment/HmiEnvironmentBase
 
