--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@
 # NB in near future  nbuild will ALWAYS use the hmicore.sftp.publish repository. For debugging we can still use the filesystem resolver
 publish.resolver=hmicore.sftp.publish
 
-rebuild.list=HmiEnvironment/HmiEnvironmentBase, HmiEnvironment/HmiAnimationEmbodiments, HmiEnvironment/HmiFaceEmbodiments, HmiEnvironment/HmiHeadAndGazeEmbodiments, HmiEnvironment/HmiPhysicsEmbodiments, HmiEnvironment/HmiTextEmbodiments, HmiEnvironment/HmiAudioEnvironment, HmiEnvironment/HmiMixedAnimationEnvironment, HmiEnvironment/HmiPhysicsEnvironment, HmiEnvironment/HmiRenderEnvironment, HmiEnvironment/HmiWorldObjectEnvironment,HmiEnvironment/HmiIpaacaRenderEnvironment,HmiEnvironment/HmiJComponentEnvironment, HmiEnvironment/HmiDebug, HmiEnvironment/AsapBodyAndFaceEmbodiments, HmiEnvironment/AsapRsbEmbodiments/java, HmiEnvironment/HmiRsbRenderEnvironment
+rebuild.list=AsapEnvironment/HmiEnvironmentBase, AsapEnvironment/HmiAnimationEmbodiments, AsapEnvironment/HmiFaceEmbodiments, AsapEnvironment/HmiHeadAndGazeEmbodiments, AsapEnvironment/HmiPhysicsEmbodiments, AsapEnvironment/HmiTextEmbodiments, AsapEnvironment/HmiAudioEnvironment, AsapEnvironment/HmiMixedAnimationEnvironment, AsapEnvironment/HmiPhysicsEnvironment, AsapEnvironment/HmiRenderEnvironment, AsapEnvironment/HmiWorldObjectEnvironment,AsapEnvironment/HmiJComponentEnvironment, AsapEnvironment/HmiDebug, AsapEnvironment/AsapBodyAndFaceEmbodiments, AsapEnvironment/AsapRsbEmbodiments/java, AsapEnvironment/HmiRsbRenderEnvironment
 
 # resource.list is the list of HmiResource projects to be included in the nightly builds
 resource.list=HmiResource/DefaultShaders, HmiResource/HmiHumanoidEmbodimentArmandia, HmiResource/HmiHumanoidEmbodimentShared, HmiResource/HmiXsd, HmiResource/LogbackConfigs
