Added UnityResources to build.properties

--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,7 @@ publish.resolver=hmicore.sftp.publish
 rebuild.list=AsapEnvironment/HmiEnvironmentBase, AsapEnvironment/HmiAnimationEmbodiments, AsapEnvironment/HmiFaceEmbodiments, AsapEnvironment/HmiHeadAndGazeEmbodiments, AsapEnvironment/HmiPhysicsEmbodiments, AsapEnvironment/HmiTextEmbodiments, AsapEnvironment/HmiAudioEnvironment, AsapEnvironment/HmiMixedAnimationEnvironment, AsapEnvironment/HmiPhysicsEnvironment, AsapEnvironment/HmiRenderEnvironment, AsapEnvironment/HmiWorldObjectEnvironment,AsapEnvironment/HmiJComponentEnvironment, AsapEnvironment/HmiDebug, AsapEnvironment/AsapBodyAndFaceEmbodiments, AsapEnvironment/HmiUnityEmbodiments, AsapEnvironment/AsapRsbEmbodiments/java, AsapEnvironment/HmiRsbRenderEnvironment,AsapEnvironment/AsapRsbWorldEnvironment/java,AsapEnvironment/AsapIpaacaWorldEnvironment,AsapEnvironment/AsapIpaacaStatusInformer
 
 # resource.list is the list of HmiResource projects to be included in the nightly builds
-resource.list=HmiResource/DefaultShaders, HmiResource/HmiHumanoidEmbodimentArmandia, HmiResource/HmiHumanoidEmbodimentShared, HmiResource/HmiXsd, HmiResource/LogbackConfigs
+resource.list=HmiResource/DefaultShaders, HmiResource/HmiHumanoidEmbodimentArmandia, HmiResource/HmiHumanoidEmbodimentShared, HmiResource/HmiXsd, HmiResource/LogbackConfigs, AsapResource/AsapUnityResources
 # Left out from resource.list: HmiResource/TestResources, MARYTTS, Shared3DModels, SmarcosResources
 
 release.list=${rebuild.list}
